force-app/main/default/objects/APTS_Bundle__c/APTS_Bundle__c.object-meta.xml
<CustomObject>
    <label>Bundle</label>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Bundle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>