force-app/main/default/objects/APTS_Bundle__c/fields/APTS_Description__c.field-meta.xml
<CustomField>
    <fullName>APTS_Description__c</fullName>
    <formula>Proposal_Line_Item__r.Apttus_Proposal__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>