force-app/main/default/objects/APTS_Bundle__c/fields/Bundle_Adjustment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Adjustment_Percent__c</fullName>
    <label>Bundle Adjustment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>