force-app/main/default/objects/APTS_Bundle__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>