force-app/main/default/objects/APTS_Bundle__c/fields/Bundle_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Net_Price__c</fullName>
    <label>Bundle Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>