force-app/main/default/objects/APTS_Bundle__c/fields/Bundle_Price__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Price__c</fullName>
    <label>Bundle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>