force-app/main/default/objects/APTS_Bundle__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <formula>text(Proposal_Line_Item__r.Apttus_Proposal__Product__r.Apttus_Config2__ConfigurationType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configuration Type</label>
    <type>Text</type>
</CustomField>