force-app/main/default/objects/APTS_Bundle__c/fields/Extended_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_List_Price__c</fullName>
    <label>Extended List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>