force-app/main/default/objects/APTS_Bundle__c/fields/Line_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Line_Quantity__c</fullName>
    <formula>Proposal_Line_Item__r.Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ExtendedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>