force-app/main/default/objects/APTS_Bundle__c/fields/SequenceLine__c.field-meta.xml
<CustomField>
    <fullName>SequenceLine__c</fullName>
    <label>SequenceLine</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>