force-app/main/default/objects/APTS_Bundle__c/fields/sys_Account_City_state__c.field-meta.xml
<CustomField>
    <fullName>sys_Account_City_state__c</fullName>
    <formula>Proposal__r.Apttus_Proposal__Account__r.BillingCity + &apos;, &apos; + Proposal__r.Apttus_Proposal__Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account City State</label>
    <type>Text</type>
</CustomField>