force-app/main/default/objects/APTS_Bundle__c/fields/sys_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>sys_Account_Name__c</fullName>
    <formula>Proposal__r.APTPS_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>