force-app/main/default/objects/APTS_Bundle__c/fields/sys_Line_Item_Notes__c.field-meta.xml
<CustomField>
    <fullName>sys_Line_Item_Notes__c</fullName>
    <formula>Proposal_Line_Item__r.Apttus_QPConfig__DerivedFromId__r.Line_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Notes</label>
    <type>Text</type>
</CustomField>