force-app/main/default/objects/APTS_Bundle__c/fields/sys_Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>sys_Proposal_Name__c</fullName>
    <formula>Proposal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Number</label>
    <type>Text</type>
</CustomField>