force-app/main/default/objects/APTS_Bundle__c/fields/sys_Room_Number__c.field-meta.xml
<CustomField>
    <fullName>sys_Room_Number__c</fullName>
    <label>Room Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>