force-app/main/default/objects/APTS_Bundle__c/fields/sys_Room_Number_orig__c.field-meta.xml
<CustomField>
    <fullName>sys_Room_Number_orig__c</fullName>
    <formula>Proposal_Line_Item__r.Apttus_QPConfig__DerivedFromId__r.Room_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Number ORIG</label>
    <type>Text</type>
</CustomField>