force-app/main/default/objects/APTS_Bundle__c/fields/sys_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>sys_Sales_Contact__c</fullName>
    <formula>Proposal__r.Owner:User.FirstName + &apos; &apos; + Proposal__r.Owner:User.LastName + &apos;, &apos; + Proposal__r.Owner:User.Title + &apos;, &apos; + Proposal__r.Owner:User.Phone + &apos;, &apos; + Proposal__r.Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Contact</label>
    <type>Text</type>
</CustomField>